[package]
name = "hok_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hok_io"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.0"
rocket = "0.5.1"
bevy = { version = "0.14.2"}
bevy_rapier2d = "0.27.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3